# GCN-CNN-for-EEG

./: .gitignore  GCN_DE_4s_Report.md  GCN_demo..py  Kušeta bilješke.docx  LICENSE  README.md  RESEARCH_HISTORY.md  Report_1.md  SEED-IV_stimulation.xlsx  SEED-IV_subject_info.txt  SUBJECT_DEPENDENT_TRAINING.md  Subject_Performance_Report_1s.csv  aggregate_loso_results.py  analyze_error.py  analyze_history.py  calculate_band_weights.py  debug_subj12.py  diagnose_physio_model.py  feature_inspection.py  forensic_graph_check.py  gcn_model_state.pt  get_file_metadata.py  graph_construction.py  inspect_volume.py  list_structure.py  modal_launcher.py  modal_orchestrator.py  modal_preprocess.py  modal_upload.py  normalization.py  preprocessing.py  preprocessing_EDF.ipynb  pyproject.toml  requirements.txt  run_config.json  segmentation.py  train.py  train_binary_diag.py  train_de.py  train_de_61.py  (+12 more)
Description/: ADAPTIVE_GRAPH_INPUT_LAYER.md  DGCNN_Report.md  DYNAMIC LEARNING.md  EASY_SUBJECTS_ANALYSIS.md  HARD_SUBJECTS_ANALYSIS.md  PROJECT_SUMMARY.md  REPRODUCIBILITY_AND_TRIAL_ANALYSIS.md
Models/: graph_construction.py  var_61.py  var_A.py  var_B.py  var_C.py  var_D.py  var_N.py  var_ind_graph.py
Params/: subject_band_weights.json
docs/: architecture_map.md  architecture_map.txt
results_analysis/: analyze_de_error.py  analyze_error.py  analyze_history.py  analyze_per_trial.py  analyze_session_drift.py
scripts/: train.py
tests/: README.md  test_config.py  test_features.py  test_graph.py  test_models.py  test_normalization.py  test_smoke_e2e.py
utils/: ICA_for_SEED.py  (+16 more)
(+708 files in other folders)
